--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   # Сервис для разворачивания контейнера с приложением
   webapi:
-    image: drip-chip-api
+    image: webapi
     ports:
       - "8080:8080"
     depends_on:
