--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/chip-drip
+spring.datasource.url=jdbc:postgresql://localhost:5432/animal-chipization
 spring.datasource.username=java
 spring.datasource.password=java
 spring.datasource.driver-class-name=org.postgresql.Driver
