--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,12 @@ services:
 
   # Сервис для разворачивания контейнера с приложением
   webapi:
-    image: webapi
+    build:
+      context: .
+      args:
+        - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/animal-chipization
+        - POSTGRES_USER=user
+        - POSTGRES_PASSWORD=password
     ports:
       - "8080:8080"
     depends_on:
@@ -23,18 +28,3 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/animal-chipization
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-
-
-  # Сервис для разворачивания контейнера с автотестами
-  tests:
-    image: mrexpen/planet_olymp_phase1
-    pull_policy: always
-    ports:
-      - "8090:8080"
-    depends_on:
-      - webapi
-    environment:
-      SERVER_URL: http://webapi:8080
-      STAGE: all
-      # all - запуск всех тестов из трёх доступных этапов
-      # 0, 1 или 2 - запуск тестов для соответствующего этапа
