--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,10 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/animal-chipization
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
+
+  api-frontend:
+    image: krios2146/animal-chipping-api:api-frontend
+    ports:
+      - "4200:4200"
+    depends_on:
+      - api-backend
