--- a/animal-chipping-front/Dockerfile
+++ b/animal-chipping-front/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:19-alpine3.16
 WORKDIR /usr/app/
-COPY ["package*.json", "."]
+COPY ["package*.json", "./"]
 RUN npm install
 COPY . .
 RUN npm install -g @angular/cli
