fix: add exit to the end of the commnd lidt in the re-deploy.yml

--- a/.github/workflows/re-deploy.yml
+++ b/.github/workflows/re-deploy.yml
@@ -15,6 +15,7 @@ jobs:
             docker-compose down
             docker rmi krios2146/animal-chipping-api:api-frontend krios2146/animal-chipping-api:api-backend -f
             docker-compose up
+            exit
           host: 78.153.130.215
           username: root
           password: ${{ secrets.SSH_PASSWORD }}
