--- a/.github/workflows/update-docker-images.yml
+++ b/.github/workflows/update-docker-images.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - "Dockerfile"
       - "/animal-chipping-front/Dockerfile"
+      - "/animal-chipping-org/Dockerfile"
   workflow_dispatch:
 
 jobs:
@@ -39,3 +40,19 @@ jobs:
         run: docker tag api-frontend krios2146/animal-chipping-api:api-frontend
       - name: Push the image to a registry
         run: docker push krios2146/animal-chipping-api:api-frontend
+
+  org-image:
+    if: ${{ contains(github.event.paths, '/animal-chipping-org/Dockerfile') || github.event_name == 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build a frontend Docker image
+        run: |
+          cd animal-chipping-org &&
+          docker build . --tag chipping-org --no-cache
+      - name: Login to a docker registry
+        run: docker login -u krios2146 -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+      - name: Tag the local image to a remote image
+        run: docker tag chipping-org krios2146/animal-chipping-api:chipping-org
+      - name: Push the image to a registry
+        run: docker push krios2146/animal-chipping-api:chipping-org
