feat: update github workflow that re-deploys app

--- a/.github/workflows/re-deploy.yml
+++ b/.github/workflows/re-deploy.yml
@@ -13,7 +13,7 @@ jobs:
           command: |
             cd animal-chipping-api && 
             docker-compose down
-            docker rmi krios2146/animal-chipping-api:api-frontend krios2146/animal-chipping-api:api-backend -f
+            docker rmi krios2146/animal-chipping-api:api-frontend krios2146/animal-chipping-api:api-backend krios2146/animal-chipping-api:chipping-org -f
             docker-compose up
             exit
           host: 78.153.130.215
